--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 
 /* nav */
-svg {
+.logo {
   height: 7vh;
 }
 
